--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,6 @@
   <div class="header__name">{{ 'MAIN.PROJECT' | translate }}</div>
   <div class="nav">
     <a class="nav__link" routerLink="/main/events" routerLinkActive="active">{{ 'MAIN.EVENTS' | translate }}</a>
-<!--    <a class="nav__link" routerLink="/main/process" routerLinkActive="active">{{ 'MAIN.PROCESS' | translate }}</a>-->
     <a class="nav__link" routerLink="/main/users" routerLinkActive="active">{{ 'MAIN.USERS' | translate }}</a>
   </div>
 
@@ -17,7 +16,8 @@
     </svg>
     <div class="header__profile-login">
       <span *ngIf="authService.isLoggedIn()" class="header__profile-item">{{user.surname}}</span>
-      <a *ngIf="!authService.isLoggedIn()" class="header__profile-btn" routerLink="/main/auth">{{ 'MAIN.LOGIN' | translate }}</a>
+      <a *ngIf="!authService.isLoggedIn()" class="header__profile-btn" routerLink="/main/auth">{{ 'MAIN.LOGIN' |
+        translate }}</a>
       <button *ngIf="authService.isLoggedIn()" class="header__profile-btn" (click)="logoutUser()">{{
         'MAIN.EXIT' |
           translate }}</button>
